# shuffler

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.mock  LICENSE  README.md  SECURITY.md  chaos_agent.py  docker-compose.yml  mock_receiver.py  pyproject.toml  test_runner.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
shuffler/: __init__.py  display.py  main.py  models.py
shuffler/vectors/: __init__.py  concurrency.py  hallucination.py
tests/: __init__.py  test_corruption.py  test_models.py
